# Schmekla

./: .env  .gitignore  CLAUDE.md  CWINDOWSsystem32cmd.exe.txt  DEVLOG.md  IMPLEMENTATION_PLAN.md  Initial prompt  README.md  REVIEW_REPORT.md  Schmekla.bat  build_domino_canopy.py  export_domino_ifc.py  forge-test.md  launch_domino_printing.py  pyproject.toml  requirements.txt  run_domino_printing.bat  test_model.py  test_output.txt
.claude/: settings.local.json
.claude/agents/: architect.md  build-error-resolver.md  code-reviewer.md  schmekla-architect.md  schmekla-boss.md  schmekla-coder.md  schmekla-debugger.md  schmekla-devops.md  schmekla-documenter.md  schmekla-security.md  schmekla-tester.md  schmekla-vtk.md
Conditions/: 704216-1-G1-Domino Printing-Provisional GA.dwg
Schmekla/: CLAUDE - without Knowledge.md  CLAUDE.md  IMPLEMENTATION_PLAN.md.bak  Phase4_Plan.md  Phase5_Plan.md  Schmekla.bat  requirements.txt  run_test.bat
Schmekla/.claude/: INDEX.md  schmekla-boss.md  schmekla-coder.md  schmekla-ifc.md  schmekla-researcher.md  schmekla-reviewer.md
Schmekla/.schmekla/: config.yaml
Schmekla/deploy/: install.bat
Schmekla/examples/: domino_printing_canopy.py
Schmekla/knowledge/: LEARNED.md
Schmekla/scripts/: read_conditions.py  verify_rag.py
Schmekla/start-from-here/: Initial.txt
agents/: Schmekla-Agent_team.txt  TEAM_OVERVIEW.md  schmekla-architect.md  schmekla-boss.md  schmekla-coder.md  schmekla-researcher.md
deploy/: install.bat
docs/: AGENT_WORKFLOW.md  ARCHITECTURE.md
examples/: simple_frame.py
knowledge/: LEARNED.md  Last Conversation.txt  SESSION_2026-01-26.md  To Read.txt
pointcloud-to-tekla/: CLAUDE.md
scripts/: verify_model.py
src/: __init__.py  main.py
src/ai/: rag_engine.py
tests/: __init__.py  conftest.py  test_drawing_editor.py
(+97 files in other folders)
